@@ -1,29 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2017/07/13 14:13:56 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/case/__init__.py
-${PYSITELIB}/case/__init__.pyc
-${PYSITELIB}/case/__init__.pyo
-${PYSITELIB}/case/case.py
-${PYSITELIB}/case/case.pyc
-${PYSITELIB}/case/case.pyo
-${PYSITELIB}/case/mock.py
-${PYSITELIB}/case/mock.pyc
-${PYSITELIB}/case/mock.pyo
-${PYSITELIB}/case/pytest.py
-${PYSITELIB}/case/pytest.pyc
-${PYSITELIB}/case/pytest.pyo
-${PYSITELIB}/case/skip.py
-${PYSITELIB}/case/skip.pyc
-${PYSITELIB}/case/skip.pyo
-${PYSITELIB}/case/tests/__init__.py
-${PYSITELIB}/case/tests/__init__.pyc
-${PYSITELIB}/case/tests/__init__.pyo
-${PYSITELIB}/case/utils.py
-${PYSITELIB}/case/utils.pyc
-${PYSITELIB}/case/utils.pyo
